--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: foodiejds
+title: jds
 email: jdsbusinessteam@gmail.com
 url: https://foodiejds.github.io
 description: "foodiejds - presenting you the best food in London."
