--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: jdsbusinessteam@gmail.com
 url: https://foodiejds.github.io
 description: "foodiejds - presenting you the best food in London."
 keywords: "foodiejds london food"
-skills: "Web Developer - Graphic Artist - User Experience Designer"
+skills: "London Food Guide"
 meta_author: LastName FirstName
 
 # Google webmaster tools
