--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-title: jds
+title: Foodie JDS
 email: jdsbusinessteam@gmail.com
 url: https://foodiejds.github.io
-description: "foodiejds - presenting you the best food in London."
-keywords: "foodiejds london food"
-skills: "London Food Guide"
-meta_author: LastName FirstName
+description: "foodiejds - Presenting you the Best Food in London."
+keywords: "foodiejds london food foodblog jds foodblogger foodie influencer instagram"
+skills: "THE BEST FODO IN LONDON"
+meta_author: Foodie JDS
 
 # Google webmaster tools
 google_verify:
