--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: jdsbusinessteam@gmail.com
 url: https://foodiejds.github.io
 description: "foodiejds - Presenting you the Best Food in London."
 keywords: "foodiejds london food foodblog jds foodblogger foodie influencer instagram"
-skills: "THE BEST FODO IN LONDON"
+skills: "LONDON FOOD GUIDE"
 meta_author: Foodie JDS
 
 # Google webmaster tools
