--- a/_config.yml
+++ b/_config.yml
@@ -42,18 +42,14 @@ social:
   - title: instagram
     url: https://www.instagram.com/foodiejds/
   - title: facebook
-    url:
-  - title: stack-overflow
-    url: http://stackoverflow.com/questions/tagged/jekyll
-  - title: bitbucket
-    url: http://bitbucket.org/jekyll
-  - title: github
-    url: http://github.com/jekyll
+    url: https://www.facebook.com/foodie.jds.5
+  - title: pinterest
+    url: https://www.pinterest.co.uk/foodiejds/
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: 3481 Melrose Place
-  - line: Beverly Hills, CA 90210
+  - line: London
+  - line: United Kingdom
 
 # Credits content
 credits: 'Freelancer is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.'
